--- a/front-end/events.html
+++ b/front-end/events.html
@@ -134,7 +134,10 @@
                Walker Taekwondo Academy Events
                <h2>Upcoming Events</h2>
                <ul>
-                  <li>Fri-Sat, Dec 10-11. Kwan Jang Brenda J. Sell Presidential Tour. Michigan.</li>
+                  <li>
+                     Fri-Sat, Dec 10-11. Kwan Jang Brenda J. Sell Presidential Tour. Michigan. Schedule <a href='./assets//USCDKA Presidential Tour leltter.pdf' download>here</a>.
+                  </li>
+
                   <li>Thu-Sat, July 14-16, 2022. USCDKA Nationals. Daytona Beach, FL.</li>
                </ul>
             </h1>
