added payment processing fee

--- a/front-end/store.html
+++ b/front-end/store.html
@@ -209,8 +209,10 @@
                         Card
                         <div id="card-container"></div>
                      </label>
-                     <p>Note: All transactions are safely and securly handled safely through Square, Inc. 
-                        Your payment information will not be kept in our records or used for any other purposes. 
+                     <p></p>
+                     <p>
+                        Note: A processing fee of 2.9% + 30 cents will be added to the final payment. All transactions are safely and 
+                        securly handled safely through Square, Inc. Your payment information will not be kept in our records or used for any other purposes. 
                      </p>
                      <div class='checkoutBtnContainer'>
                         <button type='button' class='storeNavBtn' id='backToCartBtn'>Back To Cart</button>
