--- a/front-end/store.html
+++ b/front-end/store.html
@@ -16,7 +16,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap" rel="stylesheet">
   
    <script src="https://web.squarecdn.com/v1/square.js"></script>
-   <!--<script src="https://sandbox.web.squarecdn.com/v1/square.js"></script>-->
+   <!-- <script src="https://sandbox.web.squarecdn.com/v1/square.js"></script> -->
 </head>
 <body id='top'>
    <div class='wrapper'>
@@ -211,8 +211,8 @@
                      </label>
                      <p></p>
                      <p>
-                        Note: A processing fee of 2.9% + 30 cents will be added to the final payment. All transactions are safely and 
-                        securly handled safely through Square, Inc. Your payment information will not be kept in our records or used for any other purposes. 
+                        Note: All transactions are safely and securly handled safely through Square, Inc. Your payment information 
+                        will not be kept in our records or used for any other purposes. 
                      </p>
                      <div class='checkoutBtnContainer'>
                         <button type='button' class='storeNavBtn' id='backToCartBtn'>Back To Cart</button>
