image gallery image updates

--- a/front-end/gallery.html
+++ b/front-end/gallery.html
@@ -132,36 +132,7 @@
                </a>
                Walker Taekwondo Academy Image Gallery
             </h1>
-            <h2>2021 Midwest Regional and CTU Conference</h2>
-            <div class = 'imageGallery'>
-               <a href='assets/gallery/midwestRegionalConf/conference-group.jpeg'><img src='assets/gallery/midwestRegionalConf/conference-group.jpeg' alt='Conference Group' class='galleryImg' /></a>
-               <a href='assets/gallery/midwestRegionalConf/grandmaster-award.jpeg'><img src='assets/gallery/midwestRegionalConf/grandmaster-award.jpeg' alt='Conference Group' class='galleryImg' /></a>
-               <a href='assets/gallery/midwestRegionalConf/group-cheers.jpeg'><img src='assets/gallery/midwestRegionalConf/group-cheers.jpeg' alt='Group Cheers' class='galleryImg' /></a>
-               <a href='assets/gallery/midwestRegionalConf/instructor-grade.jpeg'><img src='assets/gallery/midwestRegionalConf/instructor-grade.jpeg' alt='Instructor Grades Test' class='galleryImg' /></a>
-               <a href='assets/gallery/midwestRegionalConf/instructor-testing.jpeg'><img src='assets/gallery/midwestRegionalConf/instructor-testing.jpeg' alt='Instructor Testing' class='galleryImg' /></a>
-               <a href='assets/gallery/midwestRegionalConf/new-belt.jpeg'><img src='assets/gallery/midwestRegionalConf/new-belt.jpeg' alt='New Belt' class='galleryImg' /></a>
-               <a href='assets/gallery/midwestRegionalConf/conference-poster.jpeg'><img src='assets/gallery/midwestRegionalConf/conference-poster.jpeg' alt='New Belt' class='galleryImg' /></a>
-            </div>
-            <h2>2021 Great Lakes State Tournament</h2>
-            <div class = 'imageGallery'>
-               <a href='assets/gallery/tournament2021/celebration.jpeg'><img src='assets/gallery/tournament2021/celebration.jpeg' alt='Tournament Celebration' class='galleryImg' /></a>
-               <a href='assets/gallery/tournament2021/group-pic.jpeg'><img src='assets/gallery/tournament2021/group-pic.jpeg' alt='Tournament Group' class='galleryImg' /></a>
-               <a href='assets/gallery/tournament2021/introductions.jpeg'><img src='assets/gallery/tournament2021/introductions.jpeg' alt='Black Belt Introductions' class='galleryImg' /></a>
-               <a href='assets/gallery/tournament2021/kids-sparring.jpeg'><img src='assets/gallery/tournament2021/kids-sparring.jpeg' alt='Sparring' class='galleryImg' /></a>
-               <a href='assets/gallery/tournament2021/podium.jpeg'><img src='assets/gallery/tournament2021/podium.jpeg' alt='Podium Celebration' class='galleryImg' /></a>
-               <a href='assets/gallery/tournament2021/sparring-2.jpeg'><img src='assets/gallery/tournament2021/sparring-2.jpeg' alt='Sparring' class='galleryImg' /></a>
-               <a href='assets/gallery/tournament2021//sparring.jpeg'><img src='assets/gallery/tournament2021/sparring.jpeg' alt='Sparring' class='galleryImg' /></a>
-            </div>
-            <h2>USCDKA 2021 Nationals</h2>
-            <div class = 'imageGallery'>
-                  <a href='assets/gallery/nationals2021/garver-banner-photo.jpeg'><img src='assets/gallery/nationals2021/garver-banner-photo.jpeg' alt='Instructor Tournament Banner' class='galleryImg' /></a>
-                  <a href='assets/gallery/nationals2021/garvers-nationals.jpg'><img src='assets/gallery/nationals2021/garvers-nationals.jpg' alt='Judging Belt Testing' class='galleryImg' /></a>
-                  <a href='assets/gallery/nationals2021/jami-nationals.jpeg'><img src='assets/gallery/nationals2021/jami-nationals.jpeg' alt='Jami Garver Nationals' class='galleryImg'/></a>
-                  <a href='assets/gallery/nationals2021/pastor-nationals.jpeg'><img src='assets/gallery/nationals2021/pastor-nationals.jpeg' alt='Pastor Garver Nationals' class='galleryImg'/></a>
-                  <a href='assets/gallery/nationals2021/garvers-nationals2.jpeg' ><img src='assets/gallery/nationals2021/garvers-nationals2.jpeg' alt='Garvers Nationals' class='galleryImg'/></a>
-                  <a href='assets/gallery/nationals2021/beach-nationals.jpeg'><img src='assets/gallery/nationals2021/beach-nationals.jpeg' alt='Beach at Nationals' class='galleryImg'/></a>
-                  <a href='assets/gallery/nationals2021/beach2-nationals.jpeg'><img src='assets/gallery/nationals2021/beach2-nationals.jpeg' alt='Beach at Nationals' class='galleryImg'/></a>
-            </div>
+
             <h2>Class</h2>
             <div class= 'imageGallery'>
                <a href='assets/gallery/class/jami-leads-class.jpeg'><img src='assets/gallery/class/jami-leads-class.jpeg' alt='Instructor Jami Leads' class='galleryImg'/></a>
@@ -173,6 +144,28 @@
                <a href='assets/gallery/class/kenny-leads-class.jpg'><img src='assets/gallery/class/kenny-leads-class.jpg' alt='Black Belt Leads Class' class='galleryImg'/></a>
                <a href='assets/gallery/pretest-sparring.jpg'><img src='assets/gallery/class/pretest-sparring.jpg' alt='Class Cookout' class='galleryImg'/></a>
                <a href='assets/gallery/class/grandmaster-candidate-practices.jpg'><img src='assets/gallery/class/grandmaster-candidate-practices.jpg' alt='Class Cookout' class='galleryImg'/></a>
+            </div>
+
+            <h2>Tournament</h2>
+            <div class = 'imageGallery'>
+               <a href='assets/gallery/tournament/celebration.jpeg'><img src='assets/gallery/tournament/celebration.jpeg' alt='Tournament Celebration' class='galleryImg' /></a>
+               <a href='assets/gallery/tournament/group-pic.jpeg'><img src='assets/gallery/tournament/group-pic.jpeg' alt='Tournament Group' class='galleryImg' /></a>
+               <a href='assets/gallery/tournament/introductions.jpeg'><img src='assets/gallery/tournament/introductions.jpeg' alt='Black Belt Introductions' class='galleryImg' /></a>
+               <a href='assets/gallery/tournament/kids-sparring.jpeg'><img src='assets/gallery/tournament/kids-sparring.jpeg' alt='Sparring' class='galleryImg' /></a>
+               <a href='assets/gallery/tournament/podium.jpeg'><img src='assets/gallery/tournament/podium.jpeg' alt='Podium Celebration' class='galleryImg' /></a>
+               <a href='assets/gallery/tournament/sparring-2.jpeg'><img src='assets/gallery/tournament/sparring-2.jpeg' alt='Sparring' class='galleryImg' /></a>
+               <a href='assets/gallery/tournament/sparring.jpeg'><img src='assets/gallery/tournament/sparring.jpeg' alt='Sparring' class='galleryImg' /></a>
+            </div>
+
+            <h2>Special Events</h2>
+            <div class = 'imageGallery'>
+                  <a href='assets/gallery/events/garver-banner-photo.jpeg'><img src='assets/gallery/events/garver-banner-photo.jpeg' alt='Instructor Tournament Banner' class='galleryImg' /></a>
+                  <a href='assets/gallery/events/jami-nationals.jpeg'><img src='assets/gallery/events/jami-nationals.jpeg' alt='Jami Garver Nationals' class='galleryImg'/></a>
+                  <a href='assets/gallery/events/pastor-nationals.jpeg'><img src='assets/gallery/events/pastor-nationals.jpeg' alt='Pastor Garver Nationals' class='galleryImg'/></a>
+                  <a href='assets/gallery/events/garvers-nationals2.jpeg' ><img src='assets/gallery/events/garvers-nationals2.jpeg' alt='Garvers Nationals' class='galleryImg'/></a>
+                  <a href='assets/gallery/events/conference-group.jpeg'><img src='assets/gallery/events/conference-group.jpeg' alt='Conference Group' class='galleryImg' /></a>
+                  <a href='assets/gallery/events/grandmaster-award.jpeg'><img src='assets/gallery/events/grandmaster-award.jpeg' alt='Conference Group' class='galleryImg' /></a>
+                  <a href='assets/gallery/events/group-cheers.jpeg'><img src='assets/gallery/events/group-cheers.jpeg' alt='Group Cheers' class='galleryImg' /></a>
             </div>
          </section> 
     
