--- a/front-end/events.html
+++ b/front-end/events.html
@@ -131,11 +131,18 @@
                <a href='index.html'>
                   <img src='assets/tkd-logo.jpg' alt='Walker Taekwondo Logo' />
                </a>
-               Walker Taekwondo Academy Events
+               Walker Taekwondo Academy 2022 Events
                <h2>Upcoming Events</h2>
                <ul>
-                  <li>Thu-Sat, July 14-16, 2022. USCDKA Nationals. Daytona Beach, FL.</li>
+                  <li>Mar 18-19. National Taekwondo Conference. Ovedio, FL.</li>
+                  <li>April 30. Tennessee State Championships. Smithville, TN.</li>
+                  <li>May 21. North Carolina State Champtionships. Virtual.</li>
+                  <li>July 14-16. USCDKA Nationals. Daytona Beach, FL.</li>
                </ul>
+               <p>
+                  For more information regarding tournaments and events, please visit 
+                  <a href='https://uscdka.com/upcoming-seminars/' target='_blank'>uscdka.com/upcoming-seminars</a>
+               </p>
             </h1>
 
          </section> 
