--- a/front-end/about.html
+++ b/front-end/about.html
@@ -98,7 +98,6 @@
          <a href='about.html' class='menuLink'>About</a>
          <a href='frequently-asked-questions.html' class='menuLink'>FAQs</a>
          <a href='store.html' class='menuLink'>Store</a>
-         <a href='tournament.html' class='menuLink'>Tournament</a>
 
          <!--expand to show more-->
          <button id='navMenuBtn' class='menuLink navMenuBtn flex flexRow'>
@@ -157,7 +156,7 @@
                <img src='assets/masterDevito.png' alt='Grand Master Candidate Ray DeVito' class='instructorImg'/>
                <div class='instructorImgText'>GMC Ray DeVito<br /> 7th Degree Black Belt</div>
             </div>
-            <p>Grand Master Candidate Ray DeVito is a certified 7th degree black belt in Tae Kwon Do, 
+            <p>Grand Master Ray DeVito is a certified 8th degree black belt in Tae Kwon Do, 
                Chung Do Kwon with over 40 years of martial arts experience. His formal martial arts experience covers Tae Kwon Do, 
                Hapkido and two styles of Okinawan Karate. With a strong interest in bringing the benefits of martial arts to others he has founded and operated Chung Do Kwon schools in Illinois,
                Florida, Utah and Michigan.  He regularly participates as a lead instructor at national training events of the US Chung Do Kwon Association.  
@@ -171,7 +170,7 @@
                <img src='assets/instructorGarver.png' alt='Pastor David Garver' class='instructorImg'/>
                <div class='instructorImgText'>Sr. Instructor David Garver 2nd Degree Black Belt</div>
             </div>
-            <p>Sr. Instructor Garver is the Pastor at Walker Bible Baptist Church and second degree black belt. His Taekwondo journey started with one of his sons in 2009. He made it to purple belt then quite for a time. Eventually, 
+            <p>Sr. Instructor Garver is the Pastor at Walker Bible Baptist Church and a third degree black belt. His Taekwondo journey started with one of his sons in 2009. He made it to purple belt then quite for a time. Eventually, 
                he started again with his wife, grandson and son-in-law in 2015 and is still going strong. He is the lead instructor for the schools homeschool-focused classes that meet every 
                Tuesday and Friday at 10 am. Pastor Garver's motto is, "Don't Quit!"
             </p>
