added a letter to test subtree

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -135,7 +135,7 @@
             </h1>
             <!--Introduction-->
             <section>
-               <h2>Welcome</h2>
+               <h2>Welcome!</h2>
                   <p>Greetings from Walker Taekwondo Academy!</p>
                   <p>We are a non-profit Christian martial-arts school based out of <a href='https://wbbcmichigan.com/' target="_blank">Walker Bible Baptist Church</a> in Lansing, Michigan.</a>
                      It is our mission to better our students in mind, body, and spirit through Taekwondo while also furthering the Gospel in Lansing and beyond. 
